retained image ratio, fixed some layout issues

--- a/styles/main.css
+++ b/styles/main.css
@@ -30,8 +30,8 @@ a {
 }
 
 nav {
-    width: 95vw;
-    max-width: 1450px;
+    width: 97vw;
+    max-width: 1800px;
     margin: auto;
     /* background-color: rgb(230, 168, 168);
     background-color: rgb(245, 226, 203); */
@@ -76,19 +76,15 @@ nav li {
 
 nav li:hover {
     cursor: pointer;
-    /* color: rgb(7, 8, 48); */
     background-color: rgba(185, 167, 151, 0.7);
-    /* background-color: cornsilk; */
 }
 
 main {
     /* background-color: rgb(217, 177, 185); */
-    /* padding: 3vw 10vw; */
-    /* margin: 3vw 10vw; */
     width: 90vw;
     max-width: 1300px;
     padding-top: 3vw;
-    margin: auto
+    margin: auto;
 }
 
 main div {
@@ -105,28 +101,26 @@ h2 {
     /* background-color: rgba(255, 248, 220, 0.589); */
 }
 
-hr {
-    border: 5px solid rgba(116, 103, 81, 0.5);
-    border-radius: 5px;
-    width: 100%;
-    margin-bottom: 20px;
-}
-
 .about {
     display: flex;
     justify-content: space-between;
+    /* background-color: rgb(171, 171, 244); */
 }
 
 .about img {
+    /* width: 100%;*/
+    max-width: 220px; 
     width: 100%;
-    max-width: 220px;
+    max-height: 100%;
+    display: block;
+    margin: auto;
     border-radius: 20px;
     /* border: 3px solid rgb(99, 76, 52); */
 }
 
 .about p {
-    font-size: 1.3rem;
-    margin-left: 5vw;
+    font-size: 1.2rem;
+    margin: 0 5vw;
     /* width: 50%; */
 }
 
@@ -139,11 +133,12 @@ hr {
 } */
 
 .resumeIcon {
-    width: 100%;
+    /* width: 100%; */
     text-align: right;
     display: flex;
     flex-direction: column;
     align-items: center;
+    /* margin: auto; */
 }
 
 .fas {
@@ -271,7 +266,7 @@ footer {
 
 
 /* mobile  */
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 720px) {
     body {
         /* background-color: rgb(94, 126, 138); */
     }
